examples/errors/invalid.sl
vr x: int = 2;
var y = 33;

if a == 2 => print();